# itea

./: .clang-format  .gitignore  CMakeLists.txt  README.md
development/: CMakeLists.txt
development/fibonachi/: CMakeLists.txt
development/fibonachi/inc/: fibonachi.h
development/fibonachi/src/: fibonachi.cpp
development/fibonachi/tests/: fibonachi_tests.cpp  main.cpp
development/vector/: CMakeLists.txt
development/vector/inc/: vector.h
development/vector/tests/: vector_tests.cpp
